add phpseclib to dependencies and generate base classes

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 	}
     },
     "require": {
-        "jms/serializer": "^3.17"
+        "jms/serializer": "^3.17",
+        "phpseclib/phpseclib": "^3.0"
     }
 }
